--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,15 @@ export(emj_round)
 export(findMyVar)
 export(golden_round)
 export(nano_to_pico)
+export(rotheryICC)
 export(wrap_lookup)
 import(dplyr)
 import(magrittr)
 importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,summarize)
 importFrom(odbc,dbConnect)
 importFrom(odbc,dbGetQuery)
 importFrom(odbc,dbListFields)
